--- a/index.html
+++ b/index.html
@@ -1,13 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
+
 <body>
   <div id='pizza'>
-    
+    <canvas id="myCanvas" width="500" height="500"></canvas>
   </div>
+  <div class="btn-group mt-3 ml-5 pl-3" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-secondary" onclick="makeSmall()">Small</button>
+    <button type="button" class="btn btn-secondary" onclick="makeMedium()">Medium</button>
+    <button type="button" class="btn btn-secondary" onclick="makeLarge()">Large</button>
+    <button type="button" class="btn btn-secondary" onclick="makeXLarge()">X-Large</button>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Pepperoni</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="pepperoniLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="pepperoniWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="pepperoniRight()">Right</button>
+        </div>
+
+        <p>Sausage</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="sausageLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="sausageWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="sausageRight()">Right</button>
+        </div>
+
+        <p>Ham</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="hamLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="hamWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="hamRight()">Right</button>
+        </div>
+
+        <p>Chicken</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="chickenLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="chickenWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="chickenRight()">Right</button>
+        </div>
+
+        <p>Beef</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="beefLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="beefWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="beefRight()">Right</button>
+        </div>
+
+        <p>Pork</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="porkLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="porkWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="porkRight()">Right</button>
+        </div>
+
+        <p>Mushroom</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="mushroomLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="mushroomWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="mushroomRight()">Right</button>
+        </div>
+
+        <p>Onion</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="onionLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="onionWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="onionRight()">Right</button>
+        </div>
+
+        <p>Olive</p>
+        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="oliveLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="oliveWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="oliveRight()">Right</button>
+        </div>
+
+        <p>Pineapple</p>
+        <div class="btn-group mt-3 ml-5 pl-5 mb-5" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary" onclick="pineappleLeft()">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="pineappleWhole()">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="pineappleRight()">Right</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
