--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <canvas id="myCanvas" width="500" height="500"></canvas>
   </div>
   <div class="btn-group mt-3 ml-5 pl-3" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-secondary" onclick="makeSmall()">Small</button>
-    <button type="button" class="btn btn-secondary" onclick="makeMedium()">Medium</button>
-    <button type="button" class="btn btn-secondary" onclick="makeLarge()">Large</button>
-    <button type="button" class="btn btn-secondary" onclick="makeXLarge()">X-Large</button>
+    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(125)">Medium</button>
+    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(150)">Small</button>
+    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(175)">Large</button>
+    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(200)">X-Large</button>
   </div>
   <div class="container">
     <div class="row">
