--- a/index.html
+++ b/index.html
@@ -28,72 +28,72 @@
         <br>
         <p>Pepperoni</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="pepperoniLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="pepperoniWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="pepperoniRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addPepperoni(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addPepperoni(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addPepperoni(3)">Right</button>
         </div>
 
         <p>Sausage</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="sausageLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="sausageWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="sausageRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addSausage(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addSausage(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addSausage(3)">Right</button>
         </div>
 
         <p>Ham</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="hamLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="hamWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="hamRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addHam(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addHam(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addHam(3)">Right</button>
         </div>
 
         <p>Chicken</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="chickenLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="chickenWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="chickenRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addChicken(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addChicken(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addChicken(3)">Right</button>
         </div>
 
         <p>Beef</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="beefLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="beefWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="beefRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addBeef(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addBeef(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addBeef(3)">Right</button>
         </div>
 
         <p>Pork</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="porkLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="porkWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="porkRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addPork(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addPork(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addPork(3)">Right</button>
         </div>
 
         <p>Mushroom</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="mushroomLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="mushroomWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="mushroomRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addMushroom(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addMushroom(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addMushroom(3)">Right</button>
         </div>
 
         <p>Onion</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="onionLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="onionWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="onionRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addOnion(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addOnion(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addOnion(3)">Right</button>
         </div>
 
         <p>Olive</p>
         <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="oliveLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="oliveWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="oliveRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addOlive(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addOlive(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addOlive(3)">Right</button>
         </div>
 
         <p>Pineapple</p>
         <div class="btn-group mt-3 ml-5 pl-5 mb-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="pineappleLeft()">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="pineappleWhole()">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="pineappleRight()">Right</button>
+          <button type="button" class="btn btn-secondary" onclick="addPineapple(1)">Left</button>
+          <button type="button" class="btn btn-secondary" onclick="addPineapple(2)">Whole</button>
+          <button type="button" class="btn btn-secondary" onclick="addPineapple(3)">Right</button>
         </div>
       </div>
     </div>
