pre-made pizzas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
     <div class="container">
       <div class="row justify-content-center">
         <h1 class="">Order Pizza Here</h1>
+        <div class="col-sm">
+          <!--pepperoni pizza-->
+          <!--whole pepperoni-->
+        </div>
+        <div class="col-sm">
+          <!--hawaiian pizza-->
+          <!--ham, pineapple-->
+        </div>
+        <div class="col-sm">
+          <!--supreme pizza-->
+          <!--pepperoni, sausage, bell pepper, onion, olive-->
+        </div>
+        <div class="col-sm">
+          <!--greek pizza-->
+          <!--mushrooms? etc???-->
+        </div>
+        <div class="col-sm">
+          <!--new yoork pizza-->
+          <!--new york-->
+        </div>
       </div>
     </div>
 
