--- a/index.html
+++ b/index.html
@@ -1,106 +1,150 @@
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-
 <body>
-  <div id='pizza'>
-    <canvas id="myCanvas" width="500" height="500"></canvas>
-  </div>
-  <div class="btn-group mt-3 ml-5 pl-3" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(125)">Small</button>
-    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(150)">Medium</button>
-    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(175)">Large</button>
-    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(200)">X-Large</button>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <br>
-        <br>
-        <br>
-        <br>
-        <p>Pepperoni</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addPepperoni(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addPepperoni(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addPepperoni(3)">Right</button>
-        </div>
 
-        <p>Sausage</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addSausage(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addSausage(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addSausage(3)">Right</button>
-        </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-        <p>Ham</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addHam(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addHam(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addHam(3)">Right</button>
-        </div>
 
-        <p>Chicken</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addChicken(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addChicken(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addChicken(3)">Right</button>
-        </div>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Team One's Pizzeria</a>
+      </nav>
 
-        <p>Beef</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addBeef(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addBeef(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addBeef(3)">Right</button>
-        </div>
+      <!-- This is the premade pizza area, the various premade pizzas will go here  -->
+      <div class="container">
+          <div class="row justify-content-center">
+              <h1 class="">Order Pizza Here</h1>
+          </div>
+      </div>
 
-        <p>Pork</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addPork(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addPork(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addPork(3)">Right</button>
-        </div>
 
-        <p>Mushroom</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addMushroom(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addMushroom(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addMushroom(3)">Right</button>
-        </div>
+      <!-- This is the pizza editor area, the pizza div essentially goes here -->
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9 bg-light">
+            <div id="pizza">
+                <div id='pizza'>
+                    <canvas id="myCanvas" width="500" height="500"></canvas>
+                  </div>
+                  <div class="btn-group mt-3 ml-5 pl-3" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(125)">Small</button>
+                    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(150)">Medium</button>
+                    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(175)">Large</button>
+                    <button type="button" class="btn btn-secondary" onclick="changePizzaSize(200)">X-Large</button>
+                  </div>
+            </div>
+          </div>
+            <div class="col-lg-3 bg-light">
 
-        <p>Onion</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addOnion(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addOnion(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addOnion(3)">Right</button>
-        </div>
 
-        <p>Olive</p>
-        <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addOlive(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addOlive(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addOlive(3)">Right</button>
-        </div>
+                <div class="row">
+                    <div class="col-md-8">
+                <p>Pepperoni</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addPepperoni(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addPepperoni(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addPepperoni(3)">Right</button>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <p>Sausage</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addSausage(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addSausage(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addSausage(3)">Right</button>
+                </div> 
+            </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-sm-8">
+                <p>Ham</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addHam(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addHam(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addHam(3)">Right</button>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <p>Chicken</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addChicken(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addChicken(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addChicken(3)">Right</button>
+                </div> 
+            </div>
+            </div>
 
-        <p>Pineapple</p>
-        <div class="btn-group mt-3 ml-5 pl-5 mb-5" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-secondary" onclick="addPineapple(1)">Left</button>
-          <button type="button" class="btn btn-secondary" onclick="addPineapple(2)">Whole</button>
-          <button type="button" class="btn btn-secondary" onclick="addPineapple(3)">Right</button>
+            <div class="row">
+                <div class="col-sm-8">
+                <p>Beef</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addBeef(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addBeef(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addBeef(3)">Right</button>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <p>Pork</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addPork(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addPork(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addPork(3)">Right</button>
+                </div>
+            </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-sm-8">
+                <p>Mushroom</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addMushroom(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addMushroom(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addMushroom(3)">Right</button>
+                </div>
+            </div>
+                <div class="col-sm-4">
+                <p>Onion</p>
+                <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addOnion(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addOnion(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addOnion(3)">Right</button>
+                </div>
+            </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-8">
+                    
+                    <p>Olive</p>
+                    <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                      <button type="button" class="btn btn-secondary" onclick="addOlive(1)">Left</button>
+                      <button type="button" class="btn btn-secondary" onclick="addOlive(2)">Whole</button>
+                      <button type="button" class="btn btn-secondary" onclick="addOlive(3)">Right</button>
+                    </div>
+                </div>
+                    <div class="col-sm-4">
+                <p>Pineapple</p>
+                <div class="btn-group mt-3 ml-5 pl-5 mb-5" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" onclick="addPineapple(1)">Left</button>
+                  <button type="button" class="btn btn-secondary" onclick="addPineapple(2)">Whole</button>
+                  <button type="button" class="btn btn-secondary" onclick="addPineapple(3)">Right</button>
+                </div>
+            </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  </div>
-
-  <script src="script.js"></script>
+      <script src="script.js"></script>
 </body>
-
 </html>
