--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Team One's Pizzeria</a>
     </nav>
@@ -22,25 +17,32 @@
     <div class="container">
       <div class="row justify-content-center">
         <h1 class="">Order Pizza Here</h1>
+      </div>
+      <div class="row">
         <div class="col-sm">
           <!--pepperoni pizza-->
           <!--whole pepperoni-->
+          <button type="button" class="btn btn-secondary" onclick="preMadePepperoni()">Pepperoni</button>
         </div>
         <div class="col-sm">
           <!--hawaiian pizza-->
           <!--ham, pineapple-->
+          <button type="button" class="btn btn-secondary" onclick="preMadeHawaiian()">Hawaiian</button>
         </div>
         <div class="col-sm">
           <!--supreme pizza-->
           <!--pepperoni, sausage, bell pepper, onion, olive-->
+          <button type="button" class="btn btn-secondary" onclick="preMadeSupreme()">Supreme</button>
         </div>
         <div class="col-sm">
           <!--greek pizza-->
           <!--mushrooms? etc???-->
+          <button type="button" class="btn btn-secondary" onclick="preMadeGreek()">Greek</button>
         </div>
         <div class="col-sm">
           <!--new yoork pizza-->
           <!--new york-->
+          <button type="button" class="btn btn-secondary" onclick="preMadeNewYork()">New York</button>
         </div>
       </div>
     </div>
