--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
           <button type="button" class="btn btn-secondary" onclick="preMadeSupreme()">Supreme</button>
         </div>
         <div class="col-sm">
-          <!--greek pizza-->
-          <!--mushrooms? etc???-->
-          <button type="button" class="btn btn-secondary" onclick="preMadeGreek()">Greek</button>
+          <!--meat lovers pizza-->
+          <!--pepperoni, sausage, -->
+          <button type="button" class="btn btn-secondary" onclick="preMadeMeatLovers()">Meat Lovers</button>
         </div>
         <div class="col-sm">
-          <!--new yoork pizza-->
-          <!--new york-->
-          <button type="button" class="btn btn-secondary" onclick="preMadeNewYork()">New York</button>
+          <!--veggie-->
+          <!--olives, onion, -->
+          <button type="button" class="btn btn-secondary" onclick="preMadeVeggie()">Veggie</button>
         </div>
       </div>
     </div>
