--- a/index.html
+++ b/index.html
@@ -143,6 +143,26 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-8">
+              <p>Mushroom</p>
+              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addMushroom(0)">None</button>
+                <button type="button" class="btn btn-secondary" onclick="addMushroom(1)">Left</button>
+                <button type="button" class="btn btn-secondary" onclick="addMushroom(2)">Whole</button>
+                <button type="button" class="btn btn-secondary" onclick="addMushroom(3)">Right</button>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <p>Onion</p>
+              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addOnion(0)">None</button>
+                <button type="button" class="btn btn-secondary" onclick="addOnion(1)">Left</button>
+                <button type="button" class="btn btn-secondary" onclick="addOnion(2)">Whole</button>
+                <button type="button" class="btn btn-secondary" onclick="addOnion(3)">Right</button>
+              </div>
+            </div>
+          </div>
 
           <div class="row">
             <div class="col-sm-8">
