--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </div>
 
           </div>
-            <div class="col-md">
+            <div class="col-lg-5">
 
 
                 <div class="row">
