added extra and double buttons

--- a/index.html
+++ b/index.html
@@ -83,63 +83,87 @@
           <div class="row">
             <div class="col-md-8">
               <p>Pepperoni</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addPepperoni(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addPepperoni(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addPepperoni(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addPepperoni(3)">Right</button>
               </div>
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addPepperoni(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addPepperoni(5)">Double</button>
+              </div>
             </div>
             <div class="col-sm-4">
               <p>Sausage</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addSausage(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addSausage(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addSausage(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addSausage(3)">Right</button>
               </div> 
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addSausage(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addSausage(5)">Double</button>
+              </div>
             </div>
           </div>
           
           <div class="row">
             <div class="col-sm-8">
               <p>Ham</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addHam(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addHam(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addHam(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addHam(3)">Right</button>
               </div>
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addHam(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addHam(5)">Double</button>
+              </div>
             </div>
             <div class="col-sm-4">
               <p>Chicken</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addChicken(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addChicken(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addChicken(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addChicken(3)">Right</button>
               </div> 
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addChicken(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addChicken(5)">Double</button>
+              </div>
             </div>
           </div>
 
           <div class="row">
             <div class="col-sm-8">
               <p>Beef</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addBeef(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addBeef(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addBeef(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addBeef(3)">Right</button>
               </div>
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addBeef(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addBeef(5)">Double</button>
+              </div>
             </div>
 
             <div class="col-sm-4">
               <p>Pork</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addPork(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addPork(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addPork(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addPork(3)">Right</button>
+              </div>
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addPork(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addPork(5)">Double</button>
               </div>
             </div>
           </div>
@@ -147,26 +171,34 @@
           <div class="row">
             <div class="col-sm-8">
               <p>Olive</p>
-              <div class="btn-group mt-3 ml-5 pl-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addOlive(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addOlive(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addOlive(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addOlive(3)">Right</button>
               </div>
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addOlive(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addOlive(5)">Double</button>
+              </div>
             </div>
             <div class="col-sm-4">
               <p>Pineapple</p>
-              <div class="btn-group mt-3 ml-5 pl-5 mb-5" role="group" aria-label="Basic example">
+              <div class="btn-group ml-5 pl-5 pt-3" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary" onclick="addPineapple(0)">None</button>
                 <button type="button" class="btn btn-secondary" onclick="addPineapple(1)">Left</button>
                 <button type="button" class="btn btn-secondary" onclick="addPineapple(2)">Whole</button>
                 <button type="button" class="btn btn-secondary" onclick="addPineapple(3)">Right</button>
               </div>
+              <div class="btn-group ml-5 pl-5  pt-3" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary" onclick="addPineapple(4)">Extra</button>
+                <button type="button" class="btn btn-secondary" onclick="addPineapple(5)">Double</button>
+              </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row pt-5">
 
-            <div class="col-sm-4">
+            <div class="col-sm-4 ">
               <h3 id="priceDisplay">Price: </h3>
             </div>
             <div class="col-sm-4">
