--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Team One's Pizzeria</a>
-  </nav>
-
-      <!-- This is the premade pizza area, the various premade pizzas will go here  -->
+  <div id="pizza">
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Team One's Pizzeria</a>
+    </nav>
+  
+    <!-- This is the premade pizza area, the various premade pizzas will go here  -->
     <div id="premadeArea" class="container">
       <div class="row justify-content-center">
         <h1>Order Pizza Here</h1>
@@ -49,13 +50,13 @@
         </div>
       </div>
     </div>
-
-
+  
+  
     <!-- This is the pizza editor area, the pizza div essentially goes here -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-7 bg-light">
-          <div id="pizza">
+        <div class="col-lg-7">
+          <div id="pizzaShowcase">
             <canvas class="canvas" id="myCanvas" width="500" height="500"></canvas>
             <canvas class="canvas" id="myCanvas2" width="500" height="500"></canvas>
             <canvas class="canvas" id="myCanvas3" width="500" height="500"></canvas>
@@ -79,7 +80,7 @@
           <h3>Current Toppings:</h3>
           <p id='currentToppings'></p>
         </div>
-        <div class="col-lg-5 bg-light">
+        <div class="col-lg-5">
           <div class="row">
             <div class="col-md-8">
               <p>Pepperoni</p>
@@ -219,6 +220,7 @@
         </div>
       </div>
     </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
